--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-rut",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React Custom Hook that allows to format rut (Chilean DNI)",
   "main": "use-rut.js",
   "scripts": {
@@ -17,9 +17,17 @@
   "contributors": [
     "Carlos Fernández (https://github.com/carlosfdezb)"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/carlosfdezb/use-rut.git"
+  },
+  "bugs": {
+    "url": "https://github.com/carlosfdezb/use-rut/issues"
+  },
+  "homepage": "https://github.com/carlosfdezb/use-rut#readme"
 }
